log
Thu 11 May 2023 04:32:36 PM UTC: 
 tests:  0|4
total_score: 0/70
6a46cc8
Thu 11 May 2023 04:40:42 PM UTC: 
 heap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
c556716
Thu 11 May 2023 04:41:14 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7886ff9
Thu 11 May 2023 04:43:41 PM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
fbc304b
Thu 11 May 2023 04:47:17 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:56: error: ‘capac’ undeclared (first use in this function)
   39 |   h->heapArray = (heapElem*) malloc(sizeof(heapElem) * capac);
      |                                                        ^~~~~
heap.c:39:56: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
faab4ce
Thu 11 May 2023 04:47:29 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
524e325
Thu 11 May 2023 04:49:36 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
7d294e4
Thu 11 May 2023 04:49:56 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
00123a0
Thu 11 May 2023 04:50:50 PM UTC: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
0765194
Thu 11 May 2023 04:53:56 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|3
total_score: 10/70
c7ba9b9
Thu 11 May 2023 04:55:30 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
8b4f573
Thu 11 May 2023 05:09:50 PM UTC: 
 heap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  4|2
total_score: 30/70
0b126c5
Thu 11 May 2023 05:11:15 PM UTC: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  4|2
total_score: 30/70
f6f0c78
Thu 11 May 2023 05:12:46 PM UTC: 
 heap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|2
total_score: 30/70
4d6e763
Thu 11 May 2023 05:14:18 PM UTC: 
 heap.c | 14 +++++++++-----
 1 file changed, 9 insertions(+), 5 deletions(-)
 tests:  5|2
total_score: 35/70
da09384
Thu 11 May 2023 05:28:56 PM UTC: 
 heap.c | 33 +++++++++++++++++++++++++++++++++
 1 file changed, 33 insertions(+)
 tests:  5|2
total_score: 35/70
e76283f
Sat 13 May 2023 02:01:57 PM UTC: 
 heap.c | 39 +++++++++++++++++----------------------
 1 file changed, 17 insertions(+), 22 deletions(-)
 tests:  6|1
total_score: 60/70
59a2799
